--- a/SocialGraphStreaming/pom.xml
+++ b/SocialGraphStreaming/pom.xml
@@ -280,7 +280,7 @@ under the License.
 							<transformers>
 								<!-- add Main-Class to manifest file -->
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>wikiedits.Job</mainClass>
+									<mainClass>lk.ucsc.research.graphstream.TwitterStreamGraph</mainClass>
 								</transformer>
 							</transformers>
 							<createDependencyReducedPom>false</createDependencyReducedPom>
