--- a/SocialGraphStreaming/pom.xml
+++ b/SocialGraphStreaming/pom.xml
@@ -20,7 +20,7 @@ under the License.
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>wiki-edits</groupId>
+	<groupId>lk.ucsc.research</groupId>
 	<artifactId>social-graph-streaming</artifactId>
 	<version>0.1</version>
 	<packaging>jar</packaging>
